# RodDesign

./: Dockerfile  README.md  docker_run.sh  dockr_build.sh
data/: Parameter.spf  test_on_eight.cn
src/: .gitignore
src/RodDesign/: .gitignore  CMakeLists.txt  build.sh  main.cpp
src/RodDesign/include/: AABB_data_structure.h  DisplayFunctions.h  EditTools.h  MaterialSettingDialog.h  MomentReductionMap.h  RodNetwork.h  Setting.h  SimuRodDisplay.h  basic_geometric_calculation.h  curve_design_display.h  curve_network.h  curve_network_try.h  geometric_data_structure.h  loop_subdivision.h  mainwindow.h
src/RodDesign/src/: AABB_data_structure.cpp  DisplayFunctions.cpp  EditTools.cpp  MaterialSettingDialog.cpp  MomentReductionMap.cpp  RodNetwork.cpp  Setting.cpp  SimuRodDisplay.cpp  basic_geometric_calculation.cpp  curve_design_display.cpp  curve_network.cpp  curve_network_try.cpp  geometric_data_structure.cpp  loop_subdivision.cpp  mainwindow.cpp
